--- a/src/BubbleComponent.pug
+++ b/src/BubbleComponent.pug
@@ -1,6 +1,6 @@
 script.
     // BubbleComponent.pug
-    let text = "BLAH ajd askdh ajksh kdjhaksj  hkjh kjh "
+    export let text = "BLAH ajd askdh ajksh kdjhaksj  hkjh kjh "
 
 section.bubble-component
     #speech-bubble
