More responsive. More better

--- a/src/App.pug
+++ b/src/App.pug
@@ -24,8 +24,6 @@ main.loccom
         section.greg
             img(src="img/greg.png" alt="Greg")
 
-        hr
-
     footer.footer Made with 
         span.heart &#9829; 
         span by 
@@ -33,5 +31,5 @@ main.loccom
 style.
     .loccom .greg {
         text-align: center;
-        margin-top: 50px;
+        margin: 50px 0;
     }
