--- a/public/global.css
+++ b/public/global.css
@@ -88,12 +88,14 @@ header {
 }
 
 footer {
+	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
 	text-align: center;
 	color: orange;
-	height: 60px;
+	height: 30px;
+	background-color: rgba(0,0,0,.55);
 }
 
 footer .heart {
@@ -108,6 +110,7 @@ hr {
 h1 {
 	color: orange;
 	text-align: center;
+	font-size: 2.5em;
 }
 
 /* bootstrap fixes */
@@ -143,7 +146,7 @@ h1 {
 	border-radius: 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 600px) {
 	.jumbotron {
     	padding-top: 30px;
     	padding-bottom: 30px;
