--- a/src/BubbleComponent.pug
+++ b/src/BubbleComponent.pug
@@ -53,7 +53,7 @@ style.
         width:calc(100% - 24px);
         padding:10px;
         font-family:"Press Start 2P", sans-serif;
-        font-size:24px;
+        font-size:1.5em;
         color:var(--Speech-Bubble-Text);
         text-align:center;
         background:var(--Speech-Bubble-Background);
